--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-## Conftes Query Caching example
+## Conftest Query Caching example
 
 ### To run:
 
-```go run main.go```
+`go run main.go`
 
-```conftest test -p policies input.yaml```
+`conftest test -p policies input.yaml`
